@@ -1,3 +1,8 @@
+2001-11-03 Terry Biggs <tbiggs@users.sourceforge.net>
+
+	* one more time - change look of search results - to give preview of verses found
+	  using a clist for verse ref and verse preview.
+
 2001-11-01 Terry Biggs <tbiggs@users.sourceforge.net>
 
 	* Added two buttons to main toolbar - Footnotes and Morph Tags
